# VecsIO

./: README.md  main.py  pyproject.toml
vecsio/cli/: args.py  commands.py  main.py
vecsio/io/: __init__.py  fvecs.py  io_interface.py  ivecs.py
vecsio/validators/: __init__.py  base.py  path.py
