[project]
name = "vecsio"
version = "0.2.0a0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "logging>=0.4.9.6",
    "numpy>=2.2.6",
]

[project.scripts]
vecsio = "vecsio.cli.main:main"

[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true
